vendor/teide/include/teide/td.h

/* ===== Error Handling ===== */

typedef enum {
    TD_OK = 0,
    TD_ERR_OOM,
    TD_ERR_TYPE,
    TD_ERR_RANGE,
    TD_ERR_LENGTH,
    TD_ERR_RANK,
    TD_ERR_DOMAIN,
    TD_ERR_NYI,
    TD_ERR_IO,
    TD_ERR_SCHEMA,
    TD_ERR_CORRUPT,
    TD_ERR_CANCEL
} td_err_t;
/* ===== Core Type: td_t (32-byte block/object header) ===== */

typedef union TD_ALIGN(32) td_t {
    /* Allocated: object header */
    struct {
        /* Bytes 0-15: nullable bitmask / slice / ext nullmap */
        union {
            uint8_t  nullmap[16];
            struct { union td_t* slice_parent; int64_t slice_offset; };
            struct { union td_t* ext_nullmap;  union td_t* sym_dict; };
            struct { union td_t* str_ext_null; union td_t* str_pool; };
        };
        /* Bytes 16-31: metadata + value */
        uint8_t  mmod;       /* 0=heap, 1=file-mmap */
        uint8_t  order;      /* block order (block size = 2^order) */
        int8_t   type;       /* negative=atom, positive=vector, 0=LIST */
        uint8_t  attrs;      /* attribute flags */
        _Atomic(uint32_t) rc; /* reference count (0=free) */
        union {
            uint8_t  b8;     /* BOOL atom */
            uint8_t  u8;     /* U8 atom */
            char     c8;     /* CHAR atom */
            int16_t  i16;    /* I16 atom */
            int32_t  i32;    /* I32 atom */
            uint32_t u32;
            int64_t  i64;    /* I64/SYMBOL/DATE/TIME/TIMESTAMP atom */
            double   f64;    /* F64 atom */
            union td_t* obj; /* pointer to child (long strings, GUID) */
            struct { uint8_t slen; char sdata[7]; }; /* SSO string (<=7 bytes) */
            int64_t  len;    /* vector element count */
        };
        uint8_t  data[];     /* element data (flexible array member) */
    };
    /* Free: buddy allocator block (fl_prev/fl_next overlay bytes 0-15) */
    struct {
        union td_t* fl_prev;
        union td_t* fl_next;
    };
} td_t;
/* Operation node (32 bytes, fits one cache line) */
typedef struct td_op {
    uint16_t       opcode;     /* OP_ADD, OP_SCAN, OP_FILTER, etc. */
    uint8_t        arity;      /* 0, 1, or 2 */
    uint8_t        flags;      /* FUSED, DEAD */
    int8_t         out_type;   /* inferred output type */
    uint8_t        pad[3];
    uint32_t       id;         /* unique node ID */
    uint32_t       est_rows;   /* estimated row count */
    struct td_op*  inputs[2];  /* NULL if unused */
} td_op_t;
/* Extended operation node for N-ary ops (heap-allocated, variable size) */
typedef struct td_op_ext {
    td_op_t base;              /* 32 bytes standard node */
    union {
        td_t*   literal;       /* OP_CONST: inline literal value */
        int64_t sym;           /* OP_SCAN: column name symbol ID */
        struct {               /* OP_GROUP: group-by specification */
            td_op_t**  keys;
            uint8_t    n_keys;
            uint8_t    n_aggs;
            uint16_t*  agg_ops;
            td_op_t**  agg_ins;
        };
        struct {               /* OP_SORT: multi-column sort */
            td_op_t**  columns;
            uint8_t*   desc;
            uint8_t*   nulls_first; /* 1=nulls first, 0=nulls last */
            uint8_t    n_cols;
        } sort;
        struct {               /* OP_JOIN: join specification */
            td_op_t**  left_keys;
            td_op_t**  right_keys;
            uint8_t    n_join_keys;
            uint8_t    join_type;  /* 0=inner, 1=left, 2=full */
        } join;
        struct {               /* OP_WINDOW_JOIN: ASOF join */
            td_op_t*   time_key;      /* time/ordered key column */
            td_op_t**  eq_keys;       /* equality partition keys */
            uint8_t    n_eq_keys;     /* number of equality keys */
            uint8_t    join_type;     /* 0=inner, 1=left outer */
        } asof;
        struct {               /* OP_WINDOW: window functions */
            td_op_t**  part_keys;
            td_op_t**  order_keys;
            uint8_t*   order_descs;
            td_op_t**  func_inputs;
            uint8_t*   func_kinds;    /* TD_WIN_ROW_NUMBER etc. */
            int64_t*   func_params;   /* NTILE(n), LAG offset, etc. */
            uint8_t    n_part_keys;
            uint8_t    n_order_keys;
            uint8_t    n_funcs;
            uint8_t    frame_type;    /* TD_FRAME_ROWS / TD_FRAME_RANGE */
            uint8_t    frame_start;   /* TD_BOUND_* */
            uint8_t    frame_end;     /* TD_BOUND_* */
            int64_t    frame_start_n;
            int64_t    frame_end_n;
        } window;
        struct {  /* OP_EXPAND / OP_VAR_EXPAND / OP_SHORTEST_PATH / graph algos */
            void*     rel;            /* td_rel_t* (opaque to public header) */
            void*     sip_sel;        /* td_t* TD_SEL bitmap for SIP source-side skip */
            uint8_t   direction;      /* 0=fwd, 1=rev, 2=both */
            uint8_t   min_depth;
            uint8_t   max_depth;
            uint8_t   path_tracking;
            uint8_t   factorized;     /* 1 = emit factorized output (fvec) */
            uint16_t  max_iter;       /* PageRank/Louvain iterations  */
            double    damping;        /* PageRank damping factor      */
            int64_t   weight_col_sym; /* Dijkstra/Astar/Yen weight column   */
            int64_t   coord_col_syms[2]; /* A*: lat/lon property column names */
            void*     node_props;       /* td_t* node property table (A*: coords) */
        } graph;
        struct {  /* OP_WCO_JOIN */
            void**    rels;           /* td_rel_t** array */
            uint8_t   n_rels;
            uint8_t   n_vars;
        } wco;
        struct {  /* OP_COSINE_SIM / OP_EUCLIDEAN_DIST / OP_KNN */
            float*    query_vec;      /* query embedding (caller-owned, must outlive graph) */
            int32_t   dim;            /* embedding dimension */
            int64_t   k;              /* top-K for KNN */
        } vector;
        struct {  /* OP_HNSW_KNN */
            void*     hnsw_idx;       /* td_hnsw_t* (opaque, must outlive graph) */
            float*    query_vec;
            int32_t   dim;
            int64_t   k;
            int32_t   ef_search;
        } hnsw;
    };
} td_op_ext_t;
/* Operation graph */
typedef struct td_graph {
    td_op_t*       nodes;       /* array of op nodes (malloc'd) */
    uint32_t       node_count;  /* number of nodes */
    uint32_t       node_cap;    /* allocated capacity */
    td_t*          table;       /* bound table (provides columns for OP_SCAN) */
    td_t**         tables;      /* table registry (indexed by table_id) */
    uint16_t       n_tables;    /* number of registered tables */
    td_op_ext_t**  ext_nodes;   /* tracked extended nodes for cleanup */
    uint32_t       ext_count;   /* number of extended nodes */
    uint32_t       ext_cap;     /* capacity of ext_nodes array */
    td_t*          selection;   /* TD_SEL bitmap — lazy filter (NULL = all pass) */
} td_graph_t;
td_err_t td_sym_save(const char* path);
td_err_t td_sym_load(const char* path);
/* Reduction ops */
td_op_t* td_sum(td_graph_t* g, td_op_t* a);
td_op_t* td_prod(td_graph_t* g, td_op_t* a);
td_op_t* td_min_op(td_graph_t* g, td_op_t* a);
td_op_t* td_max_op(td_graph_t* g, td_op_t* a);
td_op_t* td_count(td_graph_t* g, td_op_t* a);
td_op_t* td_avg(td_graph_t* g, td_op_t* a);
td_op_t* td_first(td_graph_t* g, td_op_t* a);
td_op_t* td_last(td_graph_t* g, td_op_t* a);
td_op_t* td_count_distinct(td_graph_t* g, td_op_t* a);
/* Structural ops */
td_op_t* td_filter(td_graph_t* g, td_op_t* input, td_op_t* predicate);
td_op_t* td_sort_op(td_graph_t* g, td_op_t* table_node,
                     td_op_t** keys, uint8_t* descs, uint8_t* nulls_first,
                     uint8_t n_cols);
td_op_t* td_group(td_graph_t* g, td_op_t** keys, uint8_t n_keys,
                   uint16_t* agg_ops, td_op_t** agg_ins, uint8_t n_aggs);
td_op_t* td_distinct(td_graph_t* g, td_op_t** keys, uint8_t n_keys);
td_op_t* td_join(td_graph_t* g,
                  td_op_t* left_table, td_op_t** left_keys,
                  td_op_t* right_table, td_op_t** right_keys,
                  uint8_t n_keys, uint8_t join_type);
td_op_t* td_window_op(td_graph_t* g, td_op_t* table_node,
                       td_op_t** part_keys, uint8_t n_part,
                       td_op_t** order_keys, uint8_t* order_descs, uint8_t n_order,
                       uint8_t* func_kinds, td_op_t** func_inputs,
                       int64_t* func_params, uint8_t n_funcs,
                       uint8_t frame_type, uint8_t frame_start, uint8_t frame_end,
                       int64_t frame_start_n, int64_t frame_end_n);
td_op_t* td_select(td_graph_t* g, td_op_t* input,
                    td_op_t** cols, uint8_t n_cols);
td_op_t* td_head(td_graph_t* g, td_op_t* input, int64_t n);
td_op_t* td_tail(td_graph_t* g, td_op_t* input, int64_t n);
td_op_t* td_alias(td_graph_t* g, td_op_t* input, const char* name);
td_op_t* td_materialize(td_graph_t* g, td_op_t* input);
/* ===== Optimizer API ===== */

td_op_t* td_optimize(td_graph_t* g, td_op_t* root);
void     td_fuse_pass(td_graph_t* g, td_op_t* root);
/* ===== Executor API ===== */

td_t* td_execute(td_graph_t* g, td_op_t* root);
/* Column file I/O */
td_err_t td_col_save(td_t* vec, const char* path);
td_t*    td_col_load(const char* path);
/* Splayed table I/O */
td_err_t td_splay_save(td_t* tbl, const char* dir, const char* sym_path);
td_t*    td_splay_load(const char* dir, const char* sym_path);
td_t*    td_read_splayed(const char* dir, const char* sym_path);
/* Partitioned table */
td_t*    td_part_load(const char* db_root, const char* table_name);
td_t*    td_read_parted(const char* db_root, const char* table_name);
/* Metadata */
td_err_t td_meta_save_d(td_t* schema, const char* path);
td_t*    td_meta_load_d(const char* path);
/* ===== CSV API ===== */

td_t* td_read_csv(const char* path);
td_t* td_read_csv_opts(const char* path, char delimiter, bool header,
                        const int8_t* col_types, int32_t n_types);
td_err_t td_write_csv(td_t* table, const char* path);
/* ===== Pool / Parallel API ===== */

td_err_t td_pool_init(uint32_t n_workers);
void     td_pool_destroy(void);
void     td_cancel(void);