src/ffi.rs


    // Reduction ops
    pub fn td_sum(g: *mut td_graph_t, a: *mut td_op_t) -> *mut td_op_t;
    pub fn td_prod(g: *mut td_graph_t, a: *mut td_op_t) -> *mut td_op_t;
    pub fn td_min_op(g: *mut td_graph_t, a: *mut td_op_t) -> *mut td_op_t;
    pub fn td_max_op(g: *mut td_graph_t, a: *mut td_op_t) -> *mut td_op_t;
    pub fn td_count(g: *mut td_graph_t, a: *mut td_op_t) -> *mut td_op_t;
    pub fn td_avg(g: *mut td_graph_t, a: *mut td_op_t) -> *mut td_op_t;
    pub fn td_first(g: *mut td_graph_t, a: *mut td_op_t) -> *mut td_op_t;
    pub fn td_last(g: *mut td_graph_t, a: *mut td_op_t) -> *mut td_op_t;
    pub fn td_count_distinct(g: *mut td_graph_t, a: *mut td_op_t) -> *mut td_op_t;

    // Structural ops
    pub fn td_filter(
        g: *mut td_graph_t,
        input: *mut td_op_t,
        predicate: *mut td_op_t,
    ) -> *mut td_op_t;

    pub fn td_sort_op(
        g: *mut td_graph_t,
        df_node: *mut td_op_t,
        keys: *mut *mut td_op_t,
        descs: *mut u8,
        nulls_first: *mut u8,
        n_cols: u8,
    ) -> *mut td_op_t;

    pub fn td_group(
        g: *mut td_graph_t,
        keys: *mut *mut td_op_t,
        n_keys: u8,
        agg_ops: *mut u16,
        agg_ins: *mut *mut td_op_t,
        n_aggs: u8,
    ) -> *mut td_op_t;

    pub fn td_distinct(g: *mut td_graph_t, keys: *mut *mut td_op_t, n_keys: u8) -> *mut td_op_t;

    pub fn td_join(
        g: *mut td_graph_t,
        left_df: *mut td_op_t,
        left_keys: *mut *mut td_op_t,
        right_df: *mut td_op_t,
        right_keys: *mut *mut td_op_t,
        n_keys: u8,
        join_type: u8,
    ) -> *mut td_op_t;

    pub fn td_window_join(
        g: *mut td_graph_t,
        left_df: *mut td_op_t,
        right_df: *mut td_op_t,
        time_key: *mut td_op_t,
        sym_key: *mut td_op_t,
        window_lo: i64,
        window_hi: i64,
        agg_ops: *mut u16,
        agg_ins: *mut *mut td_op_t,
        n_aggs: u8,
    ) -> *mut td_op_t;
    pub fn td_window_op(
        g: *mut td_graph_t,
        df_node: *mut td_op_t,
        part_keys: *mut *mut td_op_t,
        n_part: u8,
        order_keys: *mut *mut td_op_t,
        order_descs: *mut u8,
        n_order: u8,
        func_kinds: *mut u8,
        func_inputs: *mut *mut td_op_t,
        func_params: *mut i64,
        n_funcs: u8,
        frame_type: u8,
        frame_start: u8,
        frame_end: u8,
        frame_start_n: i64,
        frame_end_n: i64,
    ) -> *mut td_op_t;

    pub fn td_project(
        g: *mut td_graph_t,
        input: *mut td_op_t,
        cols: *mut *mut td_op_t,
        n_cols: u8,
    ) -> *mut td_op_t;

    pub fn td_select(
        g: *mut td_graph_t,
        input: *mut td_op_t,
        cols: *mut *mut td_op_t,
        n_cols: u8,
    ) -> *mut td_op_t;

    pub fn td_head(g: *mut td_graph_t, input: *mut td_op_t, n: i64) -> *mut td_op_t;
    pub fn td_tail(g: *mut td_graph_t, input: *mut td_op_t, n: i64) -> *mut td_op_t;
    pub fn td_alias(g: *mut td_graph_t, input: *mut td_op_t, name: *const c_char) -> *mut td_op_t;
    pub fn td_materialize(g: *mut td_graph_t, input: *mut td_op_t) -> *mut td_op_t;

    // --- Optimizer API ---
    pub fn td_optimize(g: *mut td_graph_t, root: *mut td_op_t) -> *mut td_op_t;
    pub fn td_fuse_pass(g: *mut td_graph_t, root: *mut td_op_t);

    // --- Executor API ---
    pub fn td_execute(g: *mut td_graph_t, root: *mut td_op_t) -> *mut td_t;

    // --- Storage API ---
    pub fn td_col_save(vec: *mut td_t, path: *const c_char) -> td_err_t;
    pub fn td_col_load(path: *const c_char) -> *mut td_t;
    pub fn td_splay_save(tbl: *mut td_t, dir: *const c_char, sym_path: *const c_char) -> td_err_t;
    pub fn td_splay_load(dir: *const c_char) -> *mut td_t;
    pub fn td_read_splayed(dir: *const c_char, sym_path: *const c_char) -> *mut td_t;
    pub fn td_part_load(db_root: *const c_char, table_name: *const c_char) -> *mut td_t;
    pub fn td_read_parted(db_root: *const c_char, table_name: *const c_char) -> *mut td_t;
    pub fn td_meta_save_d(schema: *mut td_t, path: *const c_char) -> td_err_t;
    pub fn td_meta_load_d(path: *const c_char) -> *mut td_t;

    // --- Symbol Persistence ---
    pub fn td_sym_save(path: *const c_char) -> td_err_t;
    pub fn td_sym_load(path: *const c_char) -> td_err_t;

    // --- CSV API ---
    pub fn td_read_csv(path: *const c_char) -> *mut td_t;
    pub fn td_read_csv_opts(
        path: *const c_char,
        delimiter: c_char,
        header: bool,
        col_types: *const i8,
        n_types: i32,
    ) -> *mut td_t;
    pub fn td_write_csv(table: *mut td_t, path: *const c_char) -> td_err_t;

    // --- Pool / Parallel API ---
    pub fn td_pool_init(n_workers: u32) -> td_err_t;
    pub fn td_pool_destroy();
    pub fn td_cancel();
}

// ===== Compile-time layout assertions =====

const _: () = {
    assert!(std::mem::size_of::<td_t>() == 32);
    assert!(std::mem::size_of::<td_op_t>() == 32);
    assert!(std::mem::size_of::<td_op_ext_t>() == 104);
    assert!(std::mem::size_of::<td_graph_t>() == 48);
};
